<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/journal_logo"
        android:layout_gravity="center"
        android:layout_width="60dp"
        android:layout_height="60dp" />
    <TextView
        android:id="@+id/title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorLogiBlue"
        android:layout_gravity="center"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:text="@string/member"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:paddingLeft="4dp"
        android:id="@+id/etEmail"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:maxLines="1"
        android:background="@color/colorUsrPwd"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:paddingLeft="4dp"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:maxLines="1"
        android:background="@color/colorUsrPwd"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/buLogin"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/colorBckgrd"
        android:background="@color/colorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:onClick="clickLogin"/>
    <TextView
        android:text="@string/signin"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"/>
    <Button
        android:id="@+id/buRegister"
        android:text="@string/register"
        android:textSize="16sp"
        android:textColor="@color/colorBckgrd"
        android:background="@color/colorLogiBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="clickRegister"/>
    <TextView
        android:text="@string/google_signup"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"/>
    <ImageView
        android:id="@+id/google_button_img"
        android:src="@drawable/sign_up_with_google"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:onClick="clickGoogleLogin"/>



</LinearLayout>