<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".RegisterSucceedActivity">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/journal_logo"
        android:layout_gravity="center"
        android:layout_width="60dp"
        android:layout_height="60dp" />
    <TextView
        android:id="@+id/title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorLogiBlue"
        android:layout_gravity="center"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"/>

    <TextView
        android:id="@+id/tvSucceed"
        android:text="@string/reg_succeed"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"/>
    <Button
        android:id="@+id/buRegister"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/colorBckgrd"
        android:background="@color/colorLogiBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="clickLogin"/>

</LinearLayout>